push before ID branch

--- a/pmf_2/Views/co_log/Delete.cshtml
+++ b/pmf_2/Views/co_log/Delete.cshtml
@@ -77,12 +77,19 @@
 
     </dl>
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
+
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List", "Index", new { the_int_Id = @ViewBag.the_proj_Id }, null)
         </div>
     }
 </div>
+
+<div>
+    
+</div>
+
