--- a/pmf_2/Views/co_log/Details.cshtml
+++ b/pmf_2/Views/co_log/Details.cshtml
@@ -78,5 +78,6 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.co_Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { the_int_Id = @ViewBag.the_proj_Id }, null)
+    @*//@Html.ActionLink("Back to List", "Index")*@
 </p>
