--- a/pmf_2/Views/co_log/Edit.cshtml
+++ b/pmf_2/Views/co_log/Edit.cshtml
@@ -91,7 +91,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index", new { the_int_Id = @ViewBag.project_Id },null)
+    @Html.ActionLink("Back to List", "Index", new { the_int_Id = @ViewBag.the_proj_Id },null)
 </div>
 
 @section Scripts {
