--- a/pmf_2/Views/co_log/Create.cshtml
+++ b/pmf_2/Views/co_log/Create.cshtml
@@ -6,23 +6,27 @@
 
 <h2>Create</h2>
 
-
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
         <h4>co_log</h4>
+        @*<input type="hidden" id="project_Id" name="project_Id" value="@ViewBag.project_Id" />*@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.project_Id, "project_Id", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("project_Id", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.project_Id, "", new { @class = "text-danger" })
-            </div>
+        @*<div class="form-group">
+        @Html.LabelFor(model => model.project_Id, "project_Id", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownList("project_Id", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.project_Id, "", new { @class = "text-danger" })
         </div>
-
+    </div> *@
+         <div class="form-group">
+             <input type="hidden" id="project_Id" name="project_Id" value="@ViewBag.project_Id" />
+             @*@Html.EditorFor (model => model.project_Id, new { htmlAttributes = new { @class = "form-control" } })*@
+         </div>
+                       
         <div class="form-group">
             @Html.LabelFor(model => model.co_num, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -88,9 +92,10 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @*@Html.ActionLink("Back to List", "Index")*@
+    @Html.ActionLink("Back to List", "Index", new { the_int_Id = @ViewBag.the_proj_Id }, null)
 </div>
 
-@section Scripts {
+@section Scripts { 
     @Scripts.Render("~/bundles/jqueryval")
 }
