Add user project table

--- a/pmf_2/Views/Home/Index.cshtml
+++ b/pmf_2/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
     <div class="col-md-4">
         @Html.ActionLink("Change Order Log", "Index", "co_log", "null", "null")
         <br />
-        @Html.ActionLink("Project Manager", "Index", "proj_man", "null", "null")
+        @Html.ActionLink("User Project", "Index", "user_project", "null", "null")
         <br />
         @Html.ActionLink("Projects", "Index", "projects", "null", "null")
    </div>
