--- a/pmf_2/Views/projects/Details.cshtml
+++ b/pmf_2/Views/projects/Details.cshtml
@@ -27,11 +27,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.proj_man.pm_name)
+            @Html.DisplayNameFor(model => model.AspNetUser.Email)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.proj_man.pm_name)
+            @Html.DisplayFor(model => model.AspNetUser.Email)
         </dd>
 
     </dl>
