--- a/pmf_2/Views/user_project/Delete.cshtml
+++ b/pmf_2/Views/user_project/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model pmf_2.Models.proj_man
+﻿@model pmf_2.Models.user_project
 
 @{
     ViewBag.Title = "Delete";
@@ -8,15 +8,23 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>proj_man</h4>
+    <h4>user_project</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.pm_name)
+            @Html.DisplayNameFor(model => model.AspNetUser.Email)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.pm_name)
+            @Html.DisplayFor(model => model.AspNetUser.Email)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.project.project_name)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.project.project_name)
         </dd>
 
     </dl>
