--- a/pmf_2/Views/co_log/Details.cshtml
+++ b/pmf_2/Views/co_log/Details.cshtml
@@ -57,7 +57,8 @@
         <dd>
             @Html.DisplayFor(model => model.owed)
         </dd>
-
+        @if (User.IsInRole("can write"))
+        {
         <dt>
             @Html.DisplayNameFor(model => model.notes)
         </dt>
@@ -65,7 +66,7 @@
         <dd>
             @Html.DisplayFor(model => model.notes)
         </dd>
-
+        }
         <dt>
             @Html.DisplayNameFor(model => model.project.project_name)
         </dt>
