--- a/pmf_2/Views/UsersAdmin/Index.cshtml
+++ b/pmf_2/Views/UsersAdmin/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<pmf_2.Models.ApplicationUser>
+﻿@model IEnumerable<IdentitySample.Models.ApplicationUser>
 
 @{
     ViewBag.Title = "Index";
