--- a/pmf_2/Views/co_log/Details.cshtml
+++ b/pmf_2/Views/co_log/Details.cshtml
@@ -78,7 +78,11 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.co_Id }) |
-    @Html.ActionLink("Back to List", "Index", new { the_int_Id = @ViewBag.the_proj_Id }, null)
-    @*//@Html.ActionLink("Back to List", "Index")*@
+    @if (User.IsInRole("can write"))
+    {
+        @Html.ActionLink("Edit", "Edit", new { id = Model.co_Id }) 
+        @Html.Encode(" |");
+    }   
+
+    @Html.ActionLink("Back to List", "Index", new { the_int_Id = @ViewBag.the_proj_Id }, null)                                   
 </p>
